<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



        <TextView
            android:id="@+id/mainTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/mainTitle"
            android:textColor="@color/primary"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/appDescriptionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/mainTitleText"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/appDescription"
            android:textColor="@color/primary_light" />

        <TextView
            android:id="@+id/patternDefinitionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/appDescriptionTitle"
            android:padding="25dp"
            android:textSize="16sp"
            app:lineHeight="24sp"
            android:textStyle="italic"
            android:justificationMode="inter_word"
            android:text="@string/patternDefiniton" />

        <Button
            android:id="@+id/creationalPatternsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/structuralPatternsButton"
            android:layout_margin="10dp"
            android:text="@string/creationalPatternsLabel" />

        <Button
            android:id="@+id/structuralPatternsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/behavioralPatternsButton"
            android:layout_margin="10dp"
            android:text="@string/structuralPatternsLabel" />

        <Button
            android:id="@+id/behavioralPatternsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            android:text="@string/behavioralPatternsLabel" />


</androidx.constraintlayout.widget.ConstraintLayout>