<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.PatternActivity">

        <TextView
            android:id="@+id/patternCategoryText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text=""
            android:textColor="@color/primary_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/patternTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/patternCategoryText"
            android:gravity="center"
            android:text=""
            android:textColor="@color/primary"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/patternDescriptionText"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/patternTitleText"
            app:layout_constraintBottom_toTopOf="@id/patternSource"
            app:layout_goneMarginTop="10dp"
            android:padding="25dp"
            android:textSize="16sp"
            app:lineHeight="24sp"
            android:textStyle="italic"
            android:justificationMode="inter_word"
            android:text="" />

        <TextView
            android:id="@+id/patternSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/previousPatternButton"
            android:gravity="center"
            android:text="@string/patternSourceText" />

            <Button
                android:id="@+id/previousPatternButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="10dp"
                android:text="@string/previousButtonText"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/nextPatternButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="10dp"
                android:text="@string/nextButtonText"
                style="?android:attr/buttonBarButtonStyle" />

</androidx.constraintlayout.widget.ConstraintLayout>